--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning lion">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning lion" title="cute innit">
 
 </body>
 </html>
+
